@@ -26,50 +26,36 @@
 package org.niis.xroad.signer.core.tokenmanager.module;
 
 import ee.ria.xroad.common.crypto.identifier.SignMechanism;
-import ee.ria.xroad.common.util.FileContentChangeChecker;
 
 import iaik.pkcs.pkcs11.wrapper.PKCS11Constants;
+import jakarta.inject.Singleton;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.configuration2.INIConfiguration;
-import org.apache.commons.configuration2.SubnodeConfiguration;
-import org.apache.commons.configuration2.convert.DefaultListDelimiterHandler;
-import org.apache.commons.configuration2.ex.ConfigurationException;
 import org.apache.commons.configuration2.ex.ConfigurationRuntimeException;
-import org.apache.commons.configuration2.ex.ConversionException;
 import org.apache.commons.lang3.StringUtils;
+import org.niis.xroad.signer.core.config.ModuleProperties;
+import org.niis.xroad.signer.core.config.SignerProperties;
 
-import java.io.IOException;
-import java.io.Reader;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
-
-import static ee.ria.xroad.common.SystemProperties.getDeviceConfFile;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 /**
- * Encapsulates module data read form the external configuration file.
+ * Encapsulates module data read form configuration.
  * <p>
  * Each module specifies an UID, the pkcs#11 library path and other options specific to that module.
  */
 @Slf4j
-public final class ModuleConf {
-
-    /** The type used to identify software keys in key configuration. */
-    private static final String SOFTKEY_TYPE = "softToken";
+@Singleton
+@RequiredArgsConstructor
+public class ModuleConf {
 
     // Maps Type (UID) to ModuleType.
     private static final Map<String, ModuleType> MODULES = new HashMap<>();
-
-    private static final String DEFAULT_TOKEN_ID_FORMAT = "{moduleType}{slotIndex}{serialNumber}{label}";
 
     // Maps mechanism name to mechanism code of supported sign mechanisms.
     private static final Map<SignMechanism, Long> SUPPORTED_SIGN_MECHANISMS = createSupportedSignMechanismsMap();
@@ -77,40 +63,11 @@ public final class ModuleConf {
     // Maps mechanism name to mechanism code of supported key allowed mechanisms.
     private static final Map<String, Long> SUPPORTED_KEY_ALLOWED_MECHANISMS = createSupportedKeyAllowedMechanismMap();
 
-    private static final SignMechanism DEFAULT_RSA_SIGN_MECHANISM_NAME = SignMechanism.CKM_RSA_PKCS;
-    private static final SignMechanism DEFAULT_EC_SIGN_MECHANISM_NAME = SignMechanism.CKM_ECDSA;
-
     // Module configuration fields.
-    private static final String ENABLED_PARAM = "enabled";
-    private static final String LIBRARY_PARAM = "library";
-    private static final String LIBRARY_CANT_CREATE_OS_THREADS_PARAM = "library_cant_create_os_threads";
-    private static final String OS_LOCKING_OK_PARAM = "os_locking_ok";
-    private static final String SIGN_VERIFY_PIN_PARAM = "sign_verify_pin";
-    private static final String BATCH_SIGNING_ENABLED_PARAM = "batch_signing_enabled";
-    private static final String READ_ONLY_PARAM = "read_only";
-    private static final String TOKEN_ID_FORMAT_PARAM = "token_id_format";
-    private static final String SIGN_MECHANISM_PARAM = "sign_mechanism";
-    private static final String RSA_SIGN_MECHANISM_PARAM = "rsa_sign_mechanism";
-    private static final String EC_SIGN_MECHANISM_PARAM = "ec_sign_mechanism";
-    private static final String PUB_KEY_ATTRIBUTE_ENCRYPT_PARAM = "pub_key_attribute_encrypt";
-    private static final String PUB_KEY_ATTRIBUTE_VERIFY_PARAM = "pub_key_attribute_verify";
-    private static final String PUB_KEY_ATTRIBUTE_VERIFY_RECOVER_PARAM = "pub_key_attribute_verify_recover";
-    private static final String PUB_KEY_ATTRIBUTE_WRAP_PARAM = "pub_key_attribute_wrap";
-    private static final String PUB_KEY_ATTRIBUTE_TRUSTED_PARAM = "pub_key_attribute_trusted";
     private static final String PUB_KEY_ATTRIBUTE_ALLOWED_MECHANISMS_PARAM = "pub_key_attribute_allowed_mechanisms";
-    private static final String PRIV_KEY_ATTRIBUTE_SENSITIVE_PARAM = "priv_key_attribute_sensitive";
-    private static final String PRIV_KEY_ATTRIBUTE_DECRYPT_PARAM = "priv_key_attribute_decrypt";
-    private static final String PRIV_KEY_ATTRIBUTE_SIGN_PARAM = "priv_key_attribute_sign";
-    private static final String PRIV_KEY_ATTRIBUTE_SIGN_RECOVER_PARAM = "priv_key_attribute_sign_recover";
-    private static final String PRIV_KEY_ATTRIBUTE_UNWRAP_PARAM = "priv_key_attribute_unwrap";
-    private static final String PRIV_KEY_ATTRIBUTE_EXTRACTABLE_PARAM = "priv_key_attribute_extractable";
-    private static final String PRIV_KEY_ATTRIBUTE_ALWAYS_SENSITIVE_PARAM = "priv_key_attribute_always_sensitive";
-    private static final String PRIV_KEY_ATTRIBUTE_NEVER_EXTRACTABLE_PARAM = "priv_key_attribute_never_extractable";
-    private static final String PRIV_KEY_ATTRIBUTE_WRAP_WITH_TRUSTED_PARAM = "priv_key_attribute_wrap_with_trusted";
     private static final String PRIV_KEY_ATTRIBUTE_ALLOWED_MECHANISMS_PARAM = "priv_key_attribute_allowed_mechanisms";
-    private static final String SLOT_IDS_PARAM = "slot_ids";
 
-    private static FileContentChangeChecker changeChecker = null;
+    private final SignerProperties signerProperties;
 
     private static Map<SignMechanism, Long> createSupportedSignMechanismsMap() {
         Map<SignMechanism, Long> mechanisms = new HashMap<>();
@@ -139,9 +96,6 @@ public final class ModuleConf {
         return mechanisms;
     }
 
-    private ModuleConf() {
-    }
-
     /**
      * @return sign mechanism code, null in case not supported sign mechanism
      */
@@ -152,75 +106,46 @@ public final class ModuleConf {
     /**
      * @return all modules
      */
-    static Collection<ModuleType> getModules() {
+    public Collection<ModuleType> getModules() {
         return MODULES.values();
     }
 
+    private final AtomicBoolean firstLoad = new AtomicBoolean(true);
+
     /**
-     * @return true, if the configuration file has changed (modified on disk)
+     * @return true for the first call, false for the rest (configuration values can't change at runtime)
      */
-    static boolean hasChanged() {
-        try {
-            if (changeChecker == null) {
-                changeChecker = new FileContentChangeChecker(getDeviceConfFile());
-
-                return true;
-            }
-
-            return changeChecker.hasChanged();
-        } catch (Exception e) {
-            log.error("Failed to create content change checker or calculate check sum", e);
-
-            return true;
-        }
+    public boolean hasChanged() {
+        return firstLoad.getAndSet(false);
     }
 
     /**
      * Reloads the modules from the configuration.
      */
-    static void reload() {
+    void reload() {
         try {
-            reload(getDeviceConfFile());
+            log.trace("Loading module configuration from properties");
+
+            MODULES.clear();
+            MODULES.put(SoftwareModuleType.TYPE, new SoftwareModuleType());
+
+            if (signerProperties.modulesConfig() == null || !signerProperties.modulesConfig().isEmpty()) {
+                signerProperties.modulesConfig().forEach(this::parseConfiguration);
+            } else {
+                log.warn("Module configuration not found");
+            }
         } catch (Exception e) {
             log.error("Failed to load module conf", e);
         }
     }
 
-    private static void reload(String fileName) throws IOException, ConfigurationException {
-        log.trace("Loading module configuration from '{}'", fileName);
+    private void parseConfiguration(String module, ModuleProperties properties) {
+        boolean enabled = properties.enabled();
 
-        MODULES.clear();
-        MODULES.put(SoftwareModuleType.TYPE, new SoftwareModuleType());
-
-        INIConfiguration conf = new INIConfiguration();
-        conf.setListDelimiterHandler(new DefaultListDelimiterHandler(','));
-        try (Reader reader = Files.newBufferedReader(Paths.get(fileName), StandardCharsets.UTF_8)) {
-            conf.read(reader);
-        }
-
-        for (String uid : conf.getSections()) {
-            if (StringUtils.isBlank(uid)) {
-                log.error("No UID specified for module, skipping...");
-
-                continue;
-            }
-
-            try {
-                parseSection(uid, conf.getSection(uid));
-            } catch (ConfigurationRuntimeException e) {
-                log.error("Parse section failed with", e);
-            }
-        }
-    }
-
-    private static void parseSection(String uid, SubnodeConfiguration section) {
-        boolean enabled = section.getBoolean(ENABLED_PARAM, true);
-
-        if (SOFTKEY_TYPE.equalsIgnoreCase(uid)) {
+        if (SoftwareModuleType.TYPE.equalsIgnoreCase(module)) {
             if (!enabled) {
                 MODULES.remove(SoftwareModuleType.TYPE);
             }
-
             return;
         }
 
@@ -228,147 +153,116 @@ public final class ModuleConf {
             return;
         }
 
-        String library = section.getString(LIBRARY_PARAM);
+        String library = properties.library();
 
         if (StringUtils.isBlank(library)) {
-            log.error("No pkcs#11 library specified for module ({}), skipping...", uid);
-
+            log.error("No pkcs#11 library specified for module ({}), skipping...", module);
             return;
         }
 
-        Boolean libraryCantCreateOsThreads = getBoolean(section, LIBRARY_CANT_CREATE_OS_THREADS_PARAM, null);
-        Boolean osLockingOk = getBoolean(section, OS_LOCKING_OK_PARAM, null);
+        Boolean libraryCantCreateOsThreads = properties.libraryCantCreateOsThreads().orElse(null);
+        Boolean osLockingOk = properties.osLockingOk().orElse(null);
 
-        boolean verifyPin = getBoolean(section, SIGN_VERIFY_PIN_PARAM, false);
-        boolean batchSigning = getBoolean(section, BATCH_SIGNING_ENABLED_PARAM, true);
-        boolean readOnly = getBoolean(section, READ_ONLY_PARAM, false);
-        String tokenIdFormat = section.getString(TOKEN_ID_FORMAT_PARAM);
+        boolean verifyPin = properties.signVerifyPin();
+        boolean batchSigning = properties.batchSigningEnabled();
+        boolean readOnly = properties.readOnly();
+        String tokenIdFormat = properties.tokenIdFormat();
 
-        if (StringUtils.isBlank(tokenIdFormat)) {
-            tokenIdFormat = DEFAULT_TOKEN_ID_FORMAT;
-        }
+        var rsaSignMechanismName = SignMechanism.valueOf(properties.rsaSignMechanism()
+                .orElse(properties.signMechanism()));
 
-        var rsaSignMechanismName = Optional.ofNullable(section.getString(RSA_SIGN_MECHANISM_PARAM))
-                .filter(StringUtils::isNotBlank)
-                .or(() -> Optional.ofNullable(section.getString(SIGN_MECHANISM_PARAM)).filter(StringUtils::isNotBlank))
-                .map(SignMechanism::valueOf)
-                .orElse(DEFAULT_RSA_SIGN_MECHANISM_NAME);
-
-        var ecSignMechanismName = Optional.ofNullable(section.getString(EC_SIGN_MECHANISM_PARAM))
-                .filter(StringUtils::isNotBlank)
-                .map(SignMechanism::valueOf)
-                .orElse(DEFAULT_EC_SIGN_MECHANISM_NAME);
+        var ecSignMechanismName = SignMechanism.valueOf(properties.ecSignMechanism());
 
         var rsaSignMechanism = getSupportedSignMechanismCode(rsaSignMechanismName);
         var ecSignMechanism = getSupportedSignMechanismCode(ecSignMechanismName);
 
         if (rsaSignMechanism == null) {
-            log.error("Not supported sign mechanism ({}) specified for module ({}), skipping...",
-                    rsaSignMechanismName, uid);
-
+            log.error("Not supported sign mechanism ({}) specified for module ({}), skipping...", rsaSignMechanismName, module);
             return;
         }
 
         if (ecSignMechanism == null) {
-            log.error("Not supported sign mechanism ({}) specified for module ({}), skipping...",
-                    ecSignMechanismName, uid);
-
+            log.error("Not supported sign mechanism ({}) specified for module ({}), skipping...", ecSignMechanismName, module);
             return;
         }
 
-        PubKeyAttributes pubKeyAttributes = loadPubKeyAttributes(section);
-        PrivKeyAttributes privKeyAttributes = loadPrivKeyAttributes(section);
+        PubKeyAttributes pubKeyAttributes = loadPubKeyAttributes(module, properties);
+        PrivKeyAttributes privKeyAttributes = loadPrivKeyAttributes(module, properties);
 
         log.debug("Read module configuration (UID = {}, library = {}, library_cant_create_os_threads = {}"
                         + ", os_locking_ok = {}, token_id_format = {}, pin_verification_per_signing = {}, batch_signing = {}"
                         + ", rsa_sign_mechanism = {}, ec_sign_mechanism = {},pub_key_attributes = {}, priv_key_attributes = {})",
-                uid, library, libraryCantCreateOsThreads, osLockingOk, tokenIdFormat, verifyPin, batchSigning,
+                module, library, libraryCantCreateOsThreads, osLockingOk, tokenIdFormat, verifyPin, batchSigning,
                 rsaSignMechanismName, ecSignMechanismName, pubKeyAttributes, privKeyAttributes);
 
-        if (MODULES.containsKey(uid)) {
-            log.warn("Module information already defined for {}, skipping...", uid);
-
+        if (MODULES.containsKey(module)) {
+            log.warn("Module information already defined for {}, skipping...", module);
             return;
         }
 
-        List<String> slotIdStrings = Arrays.asList(getStringArray(section, SLOT_IDS_PARAM));
-        Set<Long> slotIds = slotIdStrings.stream().map(String::trim).map(Long::parseLong).collect(Collectors.toSet());
+        Set<Long> slotIds = properties.slotIds().orElse(Set.of());
 
-        MODULES.put(uid, new HardwareModuleType(
-                uid, library, libraryCantCreateOsThreads,
+        MODULES.put(module, new HardwareModuleType(
+                module, library, libraryCantCreateOsThreads,
                 osLockingOk, tokenIdFormat, verifyPin,
                 batchSigning, readOnly, rsaSignMechanismName,
                 ecSignMechanismName, privKeyAttributes, pubKeyAttributes,
                 slotIds));
     }
 
-    private static PubKeyAttributes loadPubKeyAttributes(SubnodeConfiguration section) {
+    private PubKeyAttributes loadPubKeyAttributes(String module, ModuleProperties properties) {
         PubKeyAttributes attributes = new PubKeyAttributes();
 
         // Default values for backward compatibility are used.
-        attributes.setEncrypt(getBoolean(section, PUB_KEY_ATTRIBUTE_ENCRYPT_PARAM, true));
-        attributes.setVerify(getBoolean(section, PUB_KEY_ATTRIBUTE_VERIFY_PARAM, true));
-        attributes.setVerifyRecover(getBoolean(section, PUB_KEY_ATTRIBUTE_VERIFY_RECOVER_PARAM, null));
-        attributes.setWrap(getBoolean(section, PUB_KEY_ATTRIBUTE_WRAP_PARAM, null));
-        attributes.setTrusted(getBoolean(section, PUB_KEY_ATTRIBUTE_TRUSTED_PARAM, null));
-        attributes.setAllowedMechanisms(loadAllowedKeyUsageMechanisms(
-                section, PUB_KEY_ATTRIBUTE_ALLOWED_MECHANISMS_PARAM));
+        attributes.setEncrypt(properties.pubKeyAttributeEncrypt());
+        attributes.setVerify(properties.pubKeyAttributeVerify());
+        properties.pubKeyAttributeVerifyRecover().ifPresent(attributes::setVerifyRecover);
+        properties.pubKeyAttributeWrap().ifPresent(attributes::setWrap);
+        properties.pubKeyAttributeTrusted().ifPresent(attributes::setTrusted);
+
+        attributes.setAllowedMechanisms(properties.pubKeyAttributeAllowedMechanisms()
+                .map(mechanisms -> loadAllowedKeyUsageMechanisms(mechanisms, PUB_KEY_ATTRIBUTE_ALLOWED_MECHANISMS_PARAM, module))
+                .orElse(Set.of()));
 
         return attributes;
     }
 
-    private static PrivKeyAttributes loadPrivKeyAttributes(SubnodeConfiguration section) {
+    private PrivKeyAttributes loadPrivKeyAttributes(String module, ModuleProperties properties) {
         PrivKeyAttributes attributes = new PrivKeyAttributes();
 
         // Default values for backward compatibility are used.
-        attributes.setSensitive(getBoolean(section, PRIV_KEY_ATTRIBUTE_SENSITIVE_PARAM, true));
-        attributes.setDecrypt(getBoolean(section, PRIV_KEY_ATTRIBUTE_DECRYPT_PARAM, true));
-        attributes.setSign(getBoolean(section, PRIV_KEY_ATTRIBUTE_SIGN_PARAM, true));
-        attributes.setSignRecover(getBoolean(section, PRIV_KEY_ATTRIBUTE_SIGN_RECOVER_PARAM, null));
-        attributes.setUnwrap(getBoolean(section, PRIV_KEY_ATTRIBUTE_UNWRAP_PARAM, null));
-        attributes.setExtractable(getBoolean(section, PRIV_KEY_ATTRIBUTE_EXTRACTABLE_PARAM, null));
-        attributes.setAlwaysSensitive(getBoolean(section, PRIV_KEY_ATTRIBUTE_ALWAYS_SENSITIVE_PARAM, null));
-        attributes.setNeverExtractable(getBoolean(section, PRIV_KEY_ATTRIBUTE_NEVER_EXTRACTABLE_PARAM, null));
-        attributes.setWrapWithTrusted(getBoolean(section, PRIV_KEY_ATTRIBUTE_WRAP_WITH_TRUSTED_PARAM, null));
-        attributes.setAllowedMechanisms(loadAllowedKeyUsageMechanisms(section, PRIV_KEY_ATTRIBUTE_ALLOWED_MECHANISMS_PARAM));
+        attributes.setSensitive(properties.privKeyAttributeSensitive());
+        attributes.setDecrypt(properties.privKeyAttributeDecrypt());
+        attributes.setSign(properties.privKeyAttributeSign());
+        properties.privKeyAttributeSignRecover().ifPresent(attributes::setSignRecover);
+        properties.privKeyAttributeUnwrap().ifPresent(attributes::setUnwrap);
+        properties.privKeyAttributeExtractable().ifPresent(attributes::setExtractable);
+        properties.privKeyAttributeAlwaysSensitive().ifPresent(attributes::setAlwaysSensitive);
+        properties.privKeyAttributeNeverExtractable().ifPresent(attributes::setNeverExtractable);
+        properties.privKeyAttributeWrapWithTrusted().ifPresent(attributes::setWrapWithTrusted);
+
+        attributes.setAllowedMechanisms(properties.privKeyAttributeAllowedMechanisms()
+                .map(mechanisms -> loadAllowedKeyUsageMechanisms(mechanisms, PRIV_KEY_ATTRIBUTE_ALLOWED_MECHANISMS_PARAM, module))
+                .orElse(Set.of()));
 
         return attributes;
     }
 
-    private static Set<Long> loadAllowedKeyUsageMechanisms(SubnodeConfiguration section, String key) {
+    private static Set<Long> loadAllowedKeyUsageMechanisms(List<String> mechanisms, String key, String module) {
         Set<Long> allowedMechanism = new HashSet<>();
-        String[] mechanisms = getStringArray(section, key);
 
         for (String m : mechanisms) {
-            Long mechamism = SUPPORTED_KEY_ALLOWED_MECHANISMS.get(StringUtils.strip(m));
+            Long mechanism = SUPPORTED_KEY_ALLOWED_MECHANISMS.get(StringUtils.strip(m));
 
-            if (mechamism != null) {
-                allowedMechanism.add(mechamism);
+            if (mechanism != null) {
+                allowedMechanism.add(mechanism);
             } else {
-                throw new ConfigurationRuntimeException(String.format(
-                        "Unsupported value '%s' of '%s' for module (%s), skipping...",
-                        m, key, section.getRootElementName()));
+                throw new ConfigurationRuntimeException(
+                        "Unsupported value '%s' of '%s' for module (%s), skipping...".formatted(m, key, module));
             }
         }
 
         return allowedMechanism;
     }
 
-    private static Boolean getBoolean(SubnodeConfiguration section, String key, Boolean defaultValue) {
-        try {
-            return section.getBoolean(key, defaultValue);
-        } catch (ConversionException e) {
-            throw new ConversionException(String.format("Invalid value of '%s' for module (%s), skipping...",
-                    key, section.getRootElementName()), e);
-        }
-    }
-
-    private static String[] getStringArray(SubnodeConfiguration section, String key) {
-        try {
-            return section.getStringArray(key);
-        } catch (ConversionException e) {
-            throw new ConversionException(String.format("Invalid value of '%s' for module (%s), skipping...",
-                    key, section.getRootElementName()), e);
-        }
-    }
 }
